docs: Finalize and enhance README with complete project details